--- a/password_manager/templates/view_passwords.html
+++ b/password_manager/templates/view_passwords.html
@@ -1,3 +1,12 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Password Manager</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+<body>
+    <!-- your content -->
 <h2>Saved Passwords</h2>
 <ul>
   {% for entry in passwords %}
@@ -13,3 +22,4 @@
   {% endfor %}
 </ul>
 <a href="/dashboard/">Back</a>
+</body>
