--- a/password_manager/templates/enter_password.html
+++ b/password_manager/templates/enter_password.html
@@ -1,3 +1,13 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Password Manager</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+<body>
+    <!-- your content -->
+
 <h2>Enter Password</h2>
 <form method="post">{% csrf_token %}
   <input name="title" placeholder="Title"><br>
@@ -5,3 +15,4 @@
   <button type="submit">Save</button>
 </form>
 <a href="/dashboard/">Back</a>
+</body>
