--- a/password_manager/templates/home.html
+++ b/password_manager/templates/home.html
@@ -1,3 +1,13 @@
-<h2>Welcome to Password Manager</h2>
-<a href="/login/">Login</a> |
-<a href="/register/">Register</a>
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Password Manager</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+<body>
+    <!-- your content -->
+    <h2>Welcome to Password Manager</h2>
+    <a href="/login/">Login</a> |
+    <a href="/register/">Register</a>
+</body>
