--- a/password_manager/templates/register.html
+++ b/password_manager/templates/register.html
@@ -1,3 +1,13 @@
+
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Password Manager</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+<body>
+    <!-- your content -->
 <h2>Register</h2>
 <form method="post">{% csrf_token %}
   <input name="username" placeholder="Username"><br>
@@ -5,3 +15,4 @@
   <button type="submit">Register</button>
 </form>
 <a href="/login/">Login</a>
+</body>
